# Birdcraft

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
