[package]
name = "birdcraft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { version = "0.6", features = ["web", "launch", "macro", "hooks", "html", "signals"], default-features = false }
dioxus-logger = "0.6"
wasm-bindgen = "0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = 3
lto = true
